// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup should be rendered correctly with extra props 1`] = `
<div
  className="uui-horizontal-direction root container"
>
  <div
    className="container root size-18 theme-light color-sky uui-disabled"
    onKeyDown={[Function]}
  >
    <div
      className="uui-checkbox"
    />
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </div>
  <div
    className="container root size-18 theme-light color-sky uui-disabled"
    onKeyDown={[Function]}
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <div
        className="container uui-icon uui-enabled"
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#checkbox-checked.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup should render with default props 1`] = `
<div
  className="uui-vertical-direction root container"
>
  <div
    className="container root size-18 theme-light color-sky -clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-checkbox uui-checked"
    >
      <div
        className="container uui-icon uui-enabled"
      >
        <svg
          className=""
          height={24}
          viewBox="0 0 12 24"
          width={12}
        >
          <use
            xlinkHref="#checkbox-checked.svg"
          />
        </svg>
      </div>
    </div>
    <div
      className="uui-input-label"
    >
      test1
    </div>
  </div>
  <div
    className="container root size-18 theme-light color-sky -clickable"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="uui-checkbox"
    />
    <div
      className="uui-input-label"
    >
      test2
    </div>
  </div>
</div>
`;
